# codefolio

./: .gitignore  README.md  dotnet.sln  package-lock.json  pyproject.toml
01-Introduction/: README.md
algorithm-training/python/: pyproject.toml
algorithm-training/python/approximation/: set_cover.py
algorithm-training/python/benchmark/: README.md  pyproject.toml
algorithm-training/python/benchmark/benchmark/: __init__.py  timing.py
algorithm-training/python/datastructures/: README.md  pyproject.toml
algorithm-training/python/datastructures/datastructures/: __init__.py  graph.py  simplehashtable.py
algorithm-training/python/dynamic/: knapsack.py  longest_subsequence.py  longest_substring.py
algorithm-training/python/graphs/: breadth_first.py  dijkstra.py
algorithm-training/python/machinelearning/: knn.py
algorithm-training/python/mymath/: README.md
algorithm-training/python/mymath/mymath/: __init__.py  matrix.py
algorithm-training/python/numpybasics/: numpy_basics.py
algorithm-training/python/progressbar/: README.md  pyproject.toml
algorithm-training/python/reports/: README.md  pyproject.toml
algorithm-training/python/search/: binary.py  dictionary.py  sequential.py  simplehash.py
algorithm-training/python/sort/: bubble.py  insertion.py  merge.py  quick.py  selection.py  sequential.py
algorithm-training/python/trees/: breadth_first_traversal.py  depth_first_search.py  huffman_coding.py  huffman_example_alice.txt
pythonpoetry/: pyproject.toml
pythonpoetry/mymath/: pyproject.toml
pythonpoetry/mymath/mymath/: matrix.py
(+122 files in other folders)
