[tool.poetry]
name = "pythonpoetry"
version = "0.1.0"
description = "algorithms in python with poetry"
authors = ["Color <jgstringer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
mymath = {path = "mymath"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
