[tool.poetry]
name = "pythonpoetry"
version = "0.1.0"
description = "algorithms in python with poetry"
authors = ["Color <jgstringer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
pytest = "^8.3.3"
matplotlib = "^3.9.2"
datastructures = {path = "datastructures"}
progressbar = {path = "progressbar"}
mymath = {path = "mymath"}
reports = {path = "reports"}
benchmark = {path = "benchmark"}

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
