[tool.poetry]
name = "reports"
version = "0.1.0"
description = "simple functions to help display results"
authors = ["Color <jgstringer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
